upload file started

--- a/TwoSafe/View/WinFormStrings.resx
+++ b/TwoSafe/View/WinFormStrings.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="strMessage" xml:space="preserve">
-    <value>InEnglish</value>
+  <data name="error011" xml:space="preserve">
+    <value>Password is not defined</value>
   </data>
 </root>
